# conwatch

./: .clang-format  .clang-tidy  .gitignore  .pre-commit-config.yaml  .pre-commit-config.yml  10-nettray-vpn.sh  CLAUDE.md  CMakeLists.txt  FUTURE.md  README.md  conwatch-tray.cpp  gateway_resolve.cpp  gateway_resolve.hpp  nettray.cpp  ping_monitor.cpp  ping_monitor.hpp  ping_monitor_render.cpp  ping_monitor_socket.cpp  ping_monitor_tick.cpp  renovate.json  target_resolve.cpp  target_resolve.hpp
.github/workflows/: ci.yml
scripts/: filter-compile-commands.py
systemd/: conwatch.service  nettray-vpn@.service  nettray-wlan0.service
tests/: config_test.cpp  gateway_resolve_test.cpp  integration_netlink_test.sh  target_resolve_test.cpp
watcher/: config.cpp  config.hpp  config_load.cpp  config_resolve.cpp  main.cpp  netlink.cpp  netlink.hpp  process_manager.cpp  process_manager.hpp
